deploy: 7c82f429bc5d28f89f64fed4482e3b96329ebee4

--- a/print.html
+++ b/print.html
@@ -402,22 +402,24 @@ enforcement ladder</a>.</p>
 <p>We favour joining an existing Unit rather than the creation of a new Unit that will fragment a community.</p>
 <p>With those two out of the way, make sure you have fulfilled these requirements:</p>
 <ul>
-<li>At least three active members to start with.</li>
-</ul>
+<li>
+<p>At least three active members to start with.</p>
 <p>There is no upper bound to the number of members of course.</p>
-<ul>
-<li>A publicly available organisation page.</li>
-</ul>
+</li>
+<li>
+<p>A publicly available organisation page.</p>
 <p>This can be a website, GitHub or GitLab organisation, or any platform that can host your activities, and from which people can learn about your Unit.</p>
 <p>You will be responsible for your own branding and expression. As a Unit, you have full autonomy over everything you do and how your community is managed, the only caveat being,</p>
-<ul>
-<li>You must adopt a properly enforced Code of Conduct.</li>
-</ul>
+</li>
+<li>
+<p>You must adopt a properly enforced Code of Conduct.</p>
 <p>We have made this easy for you. If you do not explicitly create or adopt your own Code of Conduct, our <a href="guides/unit-code-of-conduct.html">Unit Code of Conduct</a> will apply to your Unit. You must have your Code of Conduct publicly accessible in your Unit's organisation page.</p>
-<ul>
-<li>You must have a public email address associated with your Unit.</li>
-</ul>
+</li>
+<li>
+<p>You must have a public email address associated with your Unit.</p>
 <p>This is to ensure that you can be contacted reliably, and also so that people have an outlet to report Code of Conduct violations.</p>
+</li>
+</ul>
 
                     </main>
 
