deploy: 8539663b667c6ad8a9447000b5c8a484162eb161

--- a/guides/starting-a-unit.html
+++ b/guides/starting-a-unit.html
@@ -162,7 +162,7 @@
 </li>
 <li>
 <p>You must adopt a properly enforced Code of Conduct.</p>
-<p>We have made this easy for you. If you do not explicitly create or adopt your own Code of Conduct, our <a href="unit-code-of-conduct.html">Unit Code of Conduct</a> will apply to your Unit. You must have your Code of Conduct publicly accessible in your Unit's organisation page.</p>
+<p>We have made this easy for you. If you do not explicitly create or adopt your own Code of Conduct, our <a href="../unit-code-of-conduct.html">Unit Code of Conduct</a> will apply to your Unit. You must have your Code of Conduct publicly accessible in your Unit's organisation page.</p>
 </li>
 <li>
 <p>You must have a public email address associated with your Unit.</p>
