--- a/join.html
+++ b/join.html
@@ -163,7 +163,7 @@
 <ul>
 <li>Invite people you trust to be active in our communities activities, be it through discourse, meetups, Unit activities etc.</li>
 <li>Prefer inviting people who can add to the diversity of our community – whether it be diversity of fields of interest, gender, socio-cultural backgrounds etc.</li>
-<li>Ensure that your contact is made aware of our <a href="">Code of Conduct</a></li>
+<li>Ensure that your contact is made aware of our <a href="./code-of-conduct.html">Code of Conduct</a></li>
 <li>Do <em>not</em> invite people you have barely met or known. If they have demonstrated that they can provide value to our communities, but you don't know them well, inform the UniFOSS core team about this and we'll collectively make a decision.</li>
 </ul>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
