--- a/organisation-structure.html
+++ b/organisation-structure.html
@@ -149,7 +149,7 @@
 <p>UniFOSS obviously is comprised of individuals – who may or may not be a part of any Unit or SIG. An individual can always choose to join a Unit or SIG which interests them, or form a group to start their own Unit.</p>
 <h2 id="unit"><a class="header" href="#unit">Unit</a></h2>
 <p>A Unit can be any FOSS community, or a group of individuals with a specific goal or cause. It can either be a FOSS project, or an existing college club. A Unit is in no way subordinate to UniFOSS. They are completely autonomous and can be organised in any way they prefer. The only requirement for a Unit is they need to adopt a clear Code of Conduct[1] that is reliably enforced.</p>
-<p>If you are starting your own Unit, and need some pointers for how they can be organised, have a look at our <a href="">guide</a>.</p>
+<p>If you are starting your own Unit, and need some pointers for how they can be organised, have a look at our <a href="./guides/starting-a-unit.html">guide</a>.</p>
 <p>UniFOSS will disaffiliate with any Unit that fails to keep a high standard of behaviour. Harrassment of any kind is not tolerated.</p>
 <h2 id="special-interest-group"><a class="header" href="#special-interest-group">Special Interest Group</a></h2>
 <p>A Special Interest Group, or an SIG, is a group that is created around goals that UniFOSS wants to achieve. Their goal is to ensure that UniFOSS as a movement is doing well. Some examples of SIGs may include: Contributor Experience (to help people contribute to FOSS or start their own Units), an SIG for Moderation (I don't have more examples oof) NEEDSWORK</p>
