--- a/print.html
+++ b/print.html
@@ -178,7 +178,7 @@
 <ul>
 <li>Invite people you trust to be active in our communities activities, be it through discourse, meetups, Unit activities etc.</li>
 <li>Prefer inviting people who can add to the diversity of our community – whether it be diversity of fields of interest, gender, socio-cultural backgrounds etc.</li>
-<li>Ensure that your contact is made aware of our <a href="">Code of Conduct</a></li>
+<li>Ensure that your contact is made aware of our <a href="./code-of-conduct.html">Code of Conduct</a></li>
 <li>Do <em>not</em> invite people you have barely met or known. If they have demonstrated that they can provide value to our communities, but you don't know them well, inform the UniFOSS core team about this and we'll collectively make a decision.</li>
 </ul>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
@@ -190,9 +190,9 @@
 <p>That said, here are some ideas, put into broad categories for your inspiration.</p>
 <h2 id="units-and-sigs"><a class="header" href="#units-and-sigs">Units and SIGs</a></h2>
 <ul>
-<li>Have a look at what various <a href="">Units</a> and <a href="">SIGs</a> are upto and be a part of their activities – it is quite possible that being a part of their activities led you to UniFOSS in the first place.</li>
-<li><a href="">Create your own Unit</a> by teaming up with other members in the UniFOSS community. Almost all the activities we suggest here can be done as a part of an existing Unit, or one that you have created. A Unit can be associated with an existing project, community or movement.</li>
-<li>If you are a part of a FOSS community, you can have your members connect with the wider FOSS community at UniFOSS – just follow the <a href="">invitation</a> process.</li>
+<li>Have a look at what various <a href="./organisation-structure.html#unit">Units</a> and <a href="./organisation-structure.html#special-interest-group">SIGs</a> are upto and be a part of their activities – it is quite possible that being a part of their activities led you to UniFOSS in the first place.</li>
+<li><a href="./guides/starting-a-unit.html">Create your own Unit</a> by teaming up with other members in the UniFOSS community. Almost all the activities we suggest here can be done as a part of an existing Unit, or one that you have created. A Unit can be associated with an existing project, community or movement.</li>
+<li>If you are a part of a FOSS community, you can have your members connect with the wider FOSS community at UniFOSS – just follow the <a href="./join.html">invitation</a> process.</li>
 </ul>
 <h2 id="discourse"><a class="header" href="#discourse">Discourse</a></h2>
 <ul>
@@ -222,7 +222,7 @@
 <p>UniFOSS obviously is comprised of individuals – who may or may not be a part of any Unit or SIG. An individual can always choose to join a Unit or SIG which interests them, or form a group to start their own Unit.</p>
 <h2 id="unit"><a class="header" href="#unit">Unit</a></h2>
 <p>A Unit can be any FOSS community, or a group of individuals with a specific goal or cause. It can either be a FOSS project, or an existing college club. A Unit is in no way subordinate to UniFOSS. They are completely autonomous and can be organised in any way they prefer. The only requirement for a Unit is they need to adopt a clear Code of Conduct[1] that is reliably enforced.</p>
-<p>If you are starting your own Unit, and need some pointers for how they can be organised, have a look at our <a href="">guide</a>.</p>
+<p>If you are starting your own Unit, and need some pointers for how they can be organised, have a look at our <a href="./guides/starting-a-unit.html">guide</a>.</p>
 <p>UniFOSS will disaffiliate with any Unit that fails to keep a high standard of behaviour. Harrassment of any kind is not tolerated.</p>
 <h2 id="special-interest-group"><a class="header" href="#special-interest-group">Special Interest Group</a></h2>
 <p>A Special Interest Group, or an SIG, is a group that is created around goals that UniFOSS wants to achieve. Their goal is to ensure that UniFOSS as a movement is doing well. Some examples of SIGs may include: Contributor Experience (to help people contribute to FOSS or start their own Units), an SIG for Moderation (I don't have more examples oof) NEEDSWORK</p>
@@ -413,7 +413,7 @@ enforcement ladder</a>.</p>
 </li>
 <li>
 <p>You must adopt a properly enforced Code of Conduct.</p>
-<p>We have made this easy for you. If you do not explicitly create or adopt your own Code of Conduct, our <a href="guides/unit-code-of-conduct.html">Unit Code of Conduct</a> will apply to your Unit. You must have your Code of Conduct publicly accessible in your Unit's organisation page.</p>
+<p>We have made this easy for you. If you do not explicitly create or adopt your own Code of Conduct, our <a href="guides/../unit-code-of-conduct.html">Unit Code of Conduct</a> will apply to your Unit. You must have your Code of Conduct publicly accessible in your Unit's organisation page.</p>
 </li>
 <li>
 <p>You must have a public email address associated with your Unit.</p>
