--- a/whattodo.html
+++ b/whattodo.html
@@ -149,9 +149,9 @@
 <p>That said, here are some ideas, put into broad categories for your inspiration.</p>
 <h2 id="units-and-sigs"><a class="header" href="#units-and-sigs">Units and SIGs</a></h2>
 <ul>
-<li>Have a look at what various <a href="">Units</a> and <a href="">SIGs</a> are upto and be a part of their activities – it is quite possible that being a part of their activities led you to UniFOSS in the first place.</li>
-<li><a href="">Create your own Unit</a> by teaming up with other members in the UniFOSS community. Almost all the activities we suggest here can be done as a part of an existing Unit, or one that you have created. A Unit can be associated with an existing project, community or movement.</li>
-<li>If you are a part of a FOSS community, you can have your members connect with the wider FOSS community at UniFOSS – just follow the <a href="">invitation</a> process.</li>
+<li>Have a look at what various <a href="./organisation-structure.html#unit">Units</a> and <a href="./organisation-structure.html#special-interest-group">SIGs</a> are upto and be a part of their activities – it is quite possible that being a part of their activities led you to UniFOSS in the first place.</li>
+<li><a href="./guides/starting-a-unit.html">Create your own Unit</a> by teaming up with other members in the UniFOSS community. Almost all the activities we suggest here can be done as a part of an existing Unit, or one that you have created. A Unit can be associated with an existing project, community or movement.</li>
+<li>If you are a part of a FOSS community, you can have your members connect with the wider FOSS community at UniFOSS – just follow the <a href="./join.html">invitation</a> process.</li>
 </ul>
 <h2 id="discourse"><a class="header" href="#discourse">Discourse</a></h2>
 <ul>
