deploy: 107bcdbb092a86dce5af0d4e3fd32e01677e96ab

--- a/guides/starting-a-unit.html
+++ b/guides/starting-a-unit.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><li class="part-title">About UniFOSS</li><li class="chapter-item expanded "><a href="../index.html"><strong aria-hidden="true">1.</strong> What is UniFOSS?</a></li><li class="chapter-item expanded "><a href="../join.html"><strong aria-hidden="true">2.</strong> How to join</a></li><li class="chapter-item expanded "><a href="../whattodo.html"><strong aria-hidden="true">3.</strong> What can you do here?</a></li><li class="chapter-item expanded "><a href="../organisation-structure.html"><strong aria-hidden="true">4.</strong> Organisation structure</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Active Units</div></li><li class="chapter-item expanded "><a href="../contact.html"><strong aria-hidden="true">6.</strong> Contact points</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Code of Conduct</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="../code-of-conduct.html"><strong aria-hidden="true">7.1.</strong> UniFOSS Code of Conduct</a></li><li class="chapter-item expanded "><a href="../unit-code-of-conduct.html"><strong aria-hidden="true">7.2.</strong> Unit Code of Conduct</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Community Guides</li><li class="chapter-item expanded "><a href="../guides/starting-a-unit.html" class="active"><strong aria-hidden="true">8.</strong> Starting your own Unit</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Giving a talk</div></li><li class="spacer"></li><li class="chapter-item expanded "><div><strong aria-hidden="true">10.</strong> Contributing</div></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><li class="part-title">About UniFOSS</li><li class="chapter-item expanded "><a href="../index.html"><strong aria-hidden="true">1.</strong> What is UniFOSS?</a></li><li class="chapter-item expanded "><a href="../join.html"><strong aria-hidden="true">2.</strong> How to join</a></li><li class="chapter-item expanded "><a href="../whattodo.html"><strong aria-hidden="true">3.</strong> What can you do here?</a></li><li class="chapter-item expanded "><a href="../organisation-structure.html"><strong aria-hidden="true">4.</strong> Organisation structure</a></li><li class="chapter-item expanded "><a href="../active-units.html"><strong aria-hidden="true">5.</strong> Active Units</a></li><li class="chapter-item expanded "><a href="../contact.html"><strong aria-hidden="true">6.</strong> Contact points</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Code of Conduct</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="../code-of-conduct.html"><strong aria-hidden="true">7.1.</strong> UniFOSS Code of Conduct</a></li><li class="chapter-item expanded "><a href="../unit-code-of-conduct.html"><strong aria-hidden="true">7.2.</strong> Unit Code of Conduct</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Community Guides</li><li class="chapter-item expanded "><a href="../guides/starting-a-unit.html" class="active"><strong aria-hidden="true">8.</strong> Starting your own Unit</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Giving a talk</div></li><li class="spacer"></li><li class="chapter-item expanded "><div><strong aria-hidden="true">10.</strong> Contributing</div></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -144,7 +144,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="starting-your-own-unit"><a class="header" href="#starting-your-own-unit">Starting your own Unit</a></h1>
-<p>Some guidelines we recommend before starting your own Unit:</p>
+<h2 id="some-guidelines-we-recommend-before-starting-your-own-unit"><a class="header" href="#some-guidelines-we-recommend-before-starting-your-own-unit">Some guidelines we recommend before starting your own Unit:</a></h2>
 <p><strong>Does your Unit have a well-defined objective?</strong></p>
 <p>A Unit that serves a specific objective helps guide its decisions and activities quite nicely. It gives you an easy heuristic to evaluate how well your doing. Just ask yourself: &quot;Is my Unit meeting my stated objective?&quot;.</p>
 <p><strong>Is there already a Unit that aligns with those objectives? What new thing does your Unit bring to the table?</strong></p>
@@ -157,7 +157,9 @@
 </li>
 <li>
 <p>A publicly available organisation page.</p>
-<p>This can be a website, GitHub or GitLab organisation, or any platform that can host your activities, and from which people can learn about your Unit.</p>
+<ul>
+<li>This can be a website, GitHub or GitLab organisation, or any platform that can host your activities, and from which people can learn about your Unit.</li>
+</ul>
 <p>You will be responsible for your own branding and expression. As a Unit, you have full autonomy over everything you do and how your community is managed, the only caveat being,</p>
 </li>
 <li>
@@ -169,6 +171,23 @@
 <p>This is to ensure that you can be contacted reliably, and also so that people have an outlet to report Code of Conduct violations.</p>
 </li>
 </ul>
+<h2 id="how-can-you-create-your-unit"><a class="header" href="#how-can-you-create-your-unit">How can you create your Unit?</a></h2>
+<p>If you've decided on a Code of Conduct that would be enforced within your Unit, to &quot;officially&quot; create it, all you would need to do is send in a PR adding the following information about your Unit to the <a href="../active-units.html">Active Units</a> page:</p>
+<ul>
+<li>A link to your GitHub/GitLab/etc organisation.</li>
+<li>A link to your Code of Conduct (if you choose to adopt the <a href="../unit-code-of-conduct.html">Unit Code of Conduct</a>, link that).</li>
+<li>Information about your Unit in terms of:
+<ul>
+<li>Who you are. Ex: if you're a college club mention that, if you're a group of like minded people mention that, etc.</li>
+<li>What goals do you have.
+<ul>
+<li>Make sure that you've browsed the list of already <a href="../active-units.html">active Units</a> and what their goals are.</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<p>This is solely for the purposes of making information about your Unit accessible to the public.</p>
 
                     </main>
 
