--- a/print.html
+++ b/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><li class="part-title">About UniFOSS</li><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> What is UniFOSS?</a></li><li class="chapter-item expanded "><a href="join.html"><strong aria-hidden="true">2.</strong> How to join</a></li><li class="chapter-item expanded "><a href="whattodo.html"><strong aria-hidden="true">3.</strong> What can you do here?</a></li><li class="chapter-item expanded "><a href="organisation-structure.html"><strong aria-hidden="true">4.</strong> Organisation structure</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Active Units</div></li><li class="chapter-item expanded "><a href="contact.html"><strong aria-hidden="true">6.</strong> Contact points</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Code of Conduct</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="code-of-conduct.html"><strong aria-hidden="true">7.1.</strong> UniFOSS Code of Conduct</a></li><li class="chapter-item expanded "><a href="unit-code-of-conduct.html"><strong aria-hidden="true">7.2.</strong> Unit Code of Conduct</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Community Guides</li><li class="chapter-item expanded "><a href="guides/starting-a-unit.html"><strong aria-hidden="true">8.</strong> Starting your own Unit</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Giving a talk</div></li><li class="spacer"></li><li class="chapter-item expanded "><div><strong aria-hidden="true">10.</strong> Contributing</div></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><li class="part-title">About UniFOSS</li><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> What is UniFOSS?</a></li><li class="chapter-item expanded "><a href="join.html"><strong aria-hidden="true">2.</strong> How to join</a></li><li class="chapter-item expanded "><a href="whattodo.html"><strong aria-hidden="true">3.</strong> What can you do here?</a></li><li class="chapter-item expanded "><a href="organisation-structure.html"><strong aria-hidden="true">4.</strong> Organisation structure</a></li><li class="chapter-item expanded "><a href="active-units.html"><strong aria-hidden="true">5.</strong> Active Units</a></li><li class="chapter-item expanded "><a href="contact.html"><strong aria-hidden="true">6.</strong> Contact points</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Code of Conduct</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="code-of-conduct.html"><strong aria-hidden="true">7.1.</strong> UniFOSS Code of Conduct</a></li><li class="chapter-item expanded "><a href="unit-code-of-conduct.html"><strong aria-hidden="true">7.2.</strong> Unit Code of Conduct</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Community Guides</li><li class="chapter-item expanded "><a href="guides/starting-a-unit.html"><strong aria-hidden="true">8.</strong> Starting your own Unit</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Giving a talk</div></li><li class="spacer"></li><li class="chapter-item expanded "><div><strong aria-hidden="true">10.</strong> Contributing</div></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -219,16 +219,54 @@
 <div style="break-before: page; page-break-before: always;"></div><h1 id="organisation-structure"><a class="header" href="#organisation-structure">Organisation Structure</a></h1>
 <p>UniFOSS has a highly decentralised structure. Our main goal as an organisation is to improve and consolidate individuals passionate about FOSS throughout the country. Thus, our organisation aims to intervene as little as possible in the activities of an individual or Units.</p>
 <h2 id="individuals"><a class="header" href="#individuals">Individuals</a></h2>
-<p>UniFOSS obviously is comprised of individuals – who may or may not be a part of any Unit or SIG. An individual can always choose to join a Unit or SIG which interests them, or form a group to start their own Unit.</p>
+<p>UniFOSS obviously is comprised of individuals – who may or may not be a part of any Unit or SIG (see below). An individual can always choose to join a Unit or SIG which interests them, or form a group to start their own Unit.</p>
 <h2 id="unit"><a class="header" href="#unit">Unit</a></h2>
-<p>A Unit can be any FOSS community, or a group of individuals with a specific goal or cause. It can either be a FOSS project, or an existing college club. A Unit is in no way subordinate to UniFOSS. They are completely autonomous and can be organised in any way they prefer. The only requirement for a Unit is they need to adopt a clear Code of Conduct[1] that is reliably enforced.</p>
-<p>If you are starting your own Unit, and need some pointers for how they can be organised, have a look at our <a href="./guides/starting-a-unit.html">guide</a>.</p>
+<h3 id="what-is-a-unit"><a class="header" href="#what-is-a-unit">What is a Unit?</a></h3>
+<p>A Unit can be any FOSS community, or a group of individuals with a specific goal or cause. It can either be a FOSS project, or an existing college club.</p>
+<h3 id="what-is-the-scope-of-a-unit"><a class="header" href="#what-is-the-scope-of-a-unit">What is the scope of a Unit?</a></h3>
+<p>A Unit is in no way subordinate to UniFOSS. They are completely autonomous and can be organised in any way they prefer, they can have their own logos, branding, etc. Do what's best for your Unit. The only requirement for a Unit is they need to adopt a clear Code of Conduct<sup class="footnote-reference"><a href="#1">1</a></sup> that is reliably enforced.</p>
 <p>UniFOSS will disaffiliate with any Unit that fails to keep a high standard of behaviour. Harrassment of any kind is not tolerated.</p>
+<h3 id="what-would-a-unit-look-like"><a class="header" href="#what-would-a-unit-look-like">What would a Unit look like?</a></h3>
+<p>There are no expectations here for what a Unit could look like as long as it's related to FOSS in some form. Go nuts, get as creative as you'd like:</p>
+<ul>
+<li>An existing college club</li>
+<li>A Unit of people interested in open hardware</li>
+<li>A Unit of people working on a FOSS project of their own
+<ul>
+<li>Could even be a group of people maintaining an open source cookbook!</li>
+</ul>
+</li>
+<li>A Unit of people interested in the Open Source aspect of art and design</li>
+</ul>
+<p>If you are starting your own Unit, and need some pointers for how they can be organised, have a look at our <a href="guides/starting-a-unit.html">guide</a>.</p>
+<h3 id="how-would-a-unit-be-formed"><a class="header" href="#how-would-a-unit-be-formed">How would a Unit be formed?</a></h3>
+<p>As mentioned, the only requirement of a Unit is that they need to adopt a clear Code of Conduct<sup class="footnote-reference"><a href="#1">1</a></sup> that is reliably enforced. If you're all set to create your Unit, please refer to our <a href="guides/starting-a-unit.html">guide</a> to see how you can create your Unit.</p>
 <h2 id="special-interest-group"><a class="header" href="#special-interest-group">Special Interest Group</a></h2>
-<p>A Special Interest Group, or an SIG, is a group that is created around goals that UniFOSS wants to achieve. Their goal is to ensure that UniFOSS as a movement is doing well. Some examples of SIGs may include: Contributor Experience (to help people contribute to FOSS or start their own Units), an SIG for Moderation (I don't have more examples oof) NEEDSWORK</p>
+<h3 id="what-is-a-sig"><a class="header" href="#what-is-a-sig">What is a SIG?</a></h3>
+<p>A Special Interest Group, or a SIG, is a group that is created around goals that UniFOSS wants to achieve as an organization and exists solely for the purposes of giving UniFOSS a minimal governance structure. In other words, SIGs operate at an organizational level. Their primary is to ensure that UniFOSS as a movement is doing well.</p>
+<h3 id="what-is-the-scope-of-a-sig"><a class="header" href="#what-is-the-scope-of-a-sig">What is the scope of a SIG?</a></h3>
+<p>A SIG, in most cases will not interfere with the functioning and running of a Unit, if a SIG were to interfere with the functioning of a Unit, it would solely be in cases that threaten to violate standards that UniFOSS sets as an organization: examples being failure of a Unit to enforce their Code of Conduct or the deviation of a Unit's goals to something that does not align with the values of UniFOSS.</p>
+<p>It's highly important that the goals of a SIG are well defined so as to prevent overlapping responsibilites between SIGs as much as possible.</p>
+<h3 id="what-would-a-sig-look-like"><a class="header" href="#what-would-a-sig-look-like">What would a SIG look like?</a></h3>
+<p>A few great examples of SIGs would be: </p>
+<ul>
+<li>
+<p><em>Contributor Experience (ContribEx)</em>: ContribEx is responsible for improving the overall contributing experience of existing members of UniFOSS, as well as people getting started with not just UniFOSS, but FOSS in general. If, for example, a Unit needs help with forming/enforcing a Code of Conduct or would need help with improving one of their projects in terms of making contributing easier (provided said Unit owns projects), ContribEx would be the SIG that would provide these Units with the nescessary tools and assistance with doing so.</p>
+</li>
+<li>
+<p><em>Logistics</em>: Logistics could handle the organizational aspect of events, if a Unit wants to conduct an event, Logistics is the group that would help them out and provide necessary assistance. </p>
+</li>
+</ul>
+<h3 id="how-would-a-sig-be-formed"><a class="header" href="#how-would-a-sig-be-formed">How would a SIG be formed?</a></h3>
+<p>A SIG can broadly be formed under the following two scenarios:</p>
+<ol>
+<li>If there is a clear need for help in the community for a specific area, across multiple Units, a SIG would be created for that area.</li>
+<li>If a Unit either grows in strength or scope such that the 'assets' (knowledge, ability to assist with issues of a specific nature, etc) of such a Unit can be beneficial to UniFOSS as a community and not just the members of that Unit, then such a Unit would be <em>asked</em> if they would like to be 'graduated' to a SIG to help better serve the needs of the community, if the Unit is not comfortable doing so, that is <em>completely</em> okay as well.</li>
+</ol>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
-<p>If a Unit does not create their own Code of Conduct, by default, our own <a href="unit-code-of-conduct.html">Unit Code of Conduct</a> will be applicable to them.</p>
+<p>If a Unit does not create their own Code of Conduct, by default, our own <a href="./unit-code-of-conduct.html">Unit Code of Conduct</a> will be applicable to them.</p>
 </div>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="active-units-in-unifoss"><a class="header" href="#active-units-in-unifoss">Active Units in UniFOSS</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="contact-points-for-the-unifoss-team"><a class="header" href="#contact-points-for-the-unifoss-team">Contact Points for the UniFOSS team</a></h1>
 <p>Moderators on the Zulip realm:</p>
 <ul>
@@ -395,7 +433,7 @@ https://www.contributor-covenant.org/version/2/0/code_of_conduct.html.</p>
 <p>Community Impact Guidelines were inspired by <a href="https://github.com/mozilla/diversity">Mozilla's code of conduct
 enforcement ladder</a>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="starting-your-own-unit"><a class="header" href="#starting-your-own-unit">Starting your own Unit</a></h1>
-<p>Some guidelines we recommend before starting your own Unit:</p>
+<h2 id="some-guidelines-we-recommend-before-starting-your-own-unit"><a class="header" href="#some-guidelines-we-recommend-before-starting-your-own-unit">Some guidelines we recommend before starting your own Unit:</a></h2>
 <p><strong>Does your Unit have a well-defined objective?</strong></p>
 <p>A Unit that serves a specific objective helps guide its decisions and activities quite nicely. It gives you an easy heuristic to evaluate how well your doing. Just ask yourself: &quot;Is my Unit meeting my stated objective?&quot;.</p>
 <p><strong>Is there already a Unit that aligns with those objectives? What new thing does your Unit bring to the table?</strong></p>
@@ -408,7 +446,9 @@ enforcement ladder</a>.</p>
 </li>
 <li>
 <p>A publicly available organisation page.</p>
-<p>This can be a website, GitHub or GitLab organisation, or any platform that can host your activities, and from which people can learn about your Unit.</p>
+<ul>
+<li>This can be a website, GitHub or GitLab organisation, or any platform that can host your activities, and from which people can learn about your Unit.</li>
+</ul>
 <p>You will be responsible for your own branding and expression. As a Unit, you have full autonomy over everything you do and how your community is managed, the only caveat being,</p>
 </li>
 <li>
@@ -420,6 +460,23 @@ enforcement ladder</a>.</p>
 <p>This is to ensure that you can be contacted reliably, and also so that people have an outlet to report Code of Conduct violations.</p>
 </li>
 </ul>
+<h2 id="how-can-you-create-your-unit"><a class="header" href="#how-can-you-create-your-unit">How can you create your Unit?</a></h2>
+<p>If you've decided on a Code of Conduct that would be enforced within your Unit, to &quot;officially&quot; create it, all you would need to do is send in a PR adding the following information about your Unit to the <a href="guides/../active-units.html">Active Units</a> page:</p>
+<ul>
+<li>A link to your GitHub/GitLab/etc organisation.</li>
+<li>A link to your Code of Conduct (if you choose to adopt the <a href="guides/../unit-code-of-conduct.html">Unit Code of Conduct</a>, link that).</li>
+<li>Information about your Unit in terms of:
+<ul>
+<li>Who you are. Ex: if you're a college club mention that, if you're a group of like minded people mention that, etc.</li>
+<li>What goals do you have.
+<ul>
+<li>Make sure that you've browsed the list of already <a href="guides/../active-units.html">active Units</a> and what their goals are.</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<p>This is solely for the purposes of making information about your Unit accessible to the public.</p>
 
                     </main>
 
